--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_ENV=production
+APP_KEY=base64:iycOjnDD+Kr3Tqiz2FP8Sh2LM+pnLhlRns0hcIA1C3E=
+APP_DEBUG=false
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://project2-soyadamarapp-irrof7-fd5c8f-103-253-213-129.traefik.me
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=soya_damar_db
+DB_USERNAME=admin
+DB_PASSWORD=123456
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
