--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:iycOjnDD+Kr3Tqiz2FP8Sh2LM+pnLhlRns0hcIA1C3E=
 APP_DEBUG=false
 APP_TIMEZONE=UTC
